major improvements to all pages

--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,17 @@
 <html>
 <head>
     <title>Contact Page</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
     <body>
+        <div class = "homepage">
         <header>
-            <nav>
-                <div class ="name-title">
+            <nav class ="nav-homepage">
+                <div class ="nametitle">
                     <h3>Justin Conforti</h3>
                 </div>
                 <div class ="nav-links">
@@ -32,7 +37,7 @@
                         <input type="text" id="email" name="email" placeholder="example@email.com">
                         <br>
                         <div class ="message-label"><label for="message">Message</label></div>
-                        <textarea class ="text-area" rows="4" cols="100"></textarea>
+                        <textarea class ="text-area" rows="100" cols="100"></textarea>
                         <!-- <input type="text" id="message" name="message"> -->
                         <button class="submit-button">Submit</button>
 
@@ -46,16 +51,16 @@
         </div>
     </div>
     
-        
+      <div class = "footer">
         <div class ="footerborder"></div>
-             <div class ="footer">
-                 <p class ="copyright">Copyright @</p></div>
+            <div class ="footer-hp">
+                 <p class ="copyright">Copyright @</p>
 
 
 
 
-
-
-         </div>
+                </div>
+             </div>
+        </div>
     </body>
 </html>
