--- a/portfolio.html
+++ b/portfolio.html
@@ -2,12 +2,14 @@
 <html>
  <head>
 <title>My Self-Portfolio</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
-        <nav>
-            <div class ="name-title">
+        <nav class = "nav-homepage">
+            <div class ="nametitle">
                 <h3>Justin Conforti</h3>
             </div>
             <div class ="nav-links">
@@ -18,7 +20,7 @@
         </nav>
     </header>
 
-    <div class ="main-background">
+    <div class ="main-background background-portfolio">
         <div class ="portfolio-background">
                 <div class="portfolio-container">
             <h2>Portfolio</h2>
@@ -50,10 +52,13 @@
 
 
             
-  
-    <div class ="footerborder"></div>
-    <div class ="footer">
-        <p class ="copyright">Copyright @</p></div>
+    <div class="footer">
+        <div class ="footerborder"></div>
+                 <div class ="footer-hp">
+                        <p class ="copyright">Copyright @</p>
+
+         </div>
+    </div>
 
 </body>
 </html>
