--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <div class ="under-line"></div>
 
                         <!------Hangman Portfolio----->
-                <a href="#"><img class="hangman-picture" src="assets\images\nature-q-c-250-150-3.jpg" style="width:200px;height:150px;">
+                <a href="https://justinconforti.github.io/Word-Guess-Game/"><img class="hangman-picture" src="assets\images\nature-q-c-250-150-3.jpg" style="width:200px;height:150px;">
                         <div class="hangman-logo">Hangman</div>
                 </a>
                         <!------RPG Game Portfolio----->
