--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         <div class="hangman-logo">Hangman</div>
                 </a>
                         <!------RPG Game Portfolio----->
-                <a href="#"><img class="rpg-picture" src="assets\images\food-q-c-250-150-10.jpg" style="width:200px;height:150px;">
+                <a href="https://justinconforti.github.io/RPG-game/"><img class="rpg-picture" src="assets\images\food-q-c-250-150-10.jpg" style="width:200px;height:150px;">
                         <div class="rpg-logo">RPG Game</div>
                 </a>
                         <!------Trivia Game Portfolio----->
